--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^17.0.0",
     "antd": "^4.16.13",
     "axios": "^0.23.0",
+    "laravel-echo": "^1.11.3",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "react": "^17.0.2",
@@ -22,6 +23,7 @@
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
     "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.3.2",
     "styled-components": "^5.3.3",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
