--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "antd": "^4.16.13",
     "axios": "^0.23.0",
     "firebase": "^9.3.0",
+    "js-cookie": "^3.0.1",
     "laravel-echo": "^1.11.3",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
@@ -55,6 +56,7 @@
     ]
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.0",
     "@types/lodash": "^4.14.176",
     "@types/react-router-dom": "^5.3.1",
     "@types/styled-components": "^5.1.15",
