--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "laravel-echo": "^1.11.3",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
+    "numeral": "^2.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
