--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "antd": "^4.16.13",
     "axios": "^0.23.0",
     "firebase": "^9.3.0",
+    "i18next": "^21.6.5",
     "js-cookie": "^3.0.1",
     "laravel-echo": "^1.11.3",
     "lodash": "^4.17.21",
@@ -23,6 +24,7 @@
     "numeral": "^2.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.15.3",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
