--- a/docker-compose.release.yml
+++ b/docker-compose.release.yml
@@ -5,3 +5,7 @@ services:
       context: .
       dockerfile: Dockerfile
     image: buivanhuu2017/bigtreeland-client:production
+    deploy:
+      replicas: 1
+    ports:
+      - 80:80
