--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    image: buivanhuu2017/bigtreeland-client:latest
+    image: buivanhuu2017/bigtreeland-client:${VERSION}
     deploy:
       replicas: 1
     ports:
