update env file

--- a/.env
+++ b/.env
@@ -8,3 +8,5 @@ REACT_APP_STORAGEBUCKET=bigtreeland-780da.appspot.com
 REACT_APP_MESSAGINGSENDERID=113408851209
 REACT_APP_APPID=1:113408851209:web:666940246bc162986f27d8
 REACT_APP_MEASUREMENTID=G-KG1VB3CFSS
+
+VERSION=latest
