--- a/.env.production
+++ b/.env.production
@@ -9,3 +9,5 @@ REACT_APP_STORAGEBUCKET=bigtreeland-c92f7.appspot.com
 REACT_APP_MESSAGINGSENDERID=1009597570289
 REACT_APP_APPID=1:1009597570289:web:ec2393c24bd7c448665d50
 REACT_APP_MEASUREMENTID=G-F0TPCRMDBX
+
+VERSION=production
