--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
-REACT_APP_API=http://45.32.101.219:8000
-REACT_APP_SOCKET=http://45.32.101.219:3002
+VITE_API=http://45.32.101.219:8000
+VITE_SOCKET=http://45.32.101.219:3002
 
-REACT_APP_APIKEY=AIzaSyCora6Am-_ZgG5eZujPsxjgBn8SzTf0zzA
-REACT_APP_AUTHDOMAIN=bigtreeland-780da.firebaseapp.com
-REACT_APP_PROJECTID=bigtreeland-780da
-REACT_APP_STORAGEBUCKET=bigtreeland-780da.appspot.com
-REACT_APP_MESSAGINGSENDERID=113408851209
-REACT_APP_APPID=1:113408851209:web:666940246bc162986f27d8
-REACT_APP_MEASUREMENTID=G-KG1VB3CFSS
+VITE_APIKEY=AIzaSyCora6Am-_ZgG5eZujPsxjgBn8SzTf0zzA
+VITE_AUTHDOMAIN=bigtreeland-780da.firebaseapp.com
+VITE_PROJECTID=bigtreeland-780da
+VITE_STORAGEBUCKET=bigtreeland-780da.appspot.com
+VITE_MESSAGINGSENDERID=113408851209
+VITE_APPID=1:113408851209:web:666940246bc162986f27d8
+VITE_MEASUREMENTID=G-KG1VB3CFSS
