--- a/.env.production
+++ b/.env.production
@@ -1,11 +1,10 @@
-REACT_APP_API=http://207.148.78.106:8000
+VITE_API=http://207.148.78.106:8000
+VITE_SOCKET=http://207.148.78.106:3002
 
-REACT_APP_SOCKET=http://207.148.78.106:3002
-
-REACT_APP_APIKEY=AIzaSyBvagbpOZCnRg775Yoz3uQu80s8KG1wYR4
-REACT_APP_AUTHDOMAIN=bigtreeland-c92f7.firebaseapp.com
-REACT_APP_PROJECTID=bigtreeland-c92f7
-REACT_APP_STORAGEBUCKET=bigtreeland-c92f7.appspot.com
-REACT_APP_MESSAGINGSENDERID=1009597570289
-REACT_APP_APPID=1:1009597570289:web:ec2393c24bd7c448665d50
-REACT_APP_MEASUREMENTID=G-F0TPCRMDBX
+VITE_APIKEY=AIzaSyBvagbpOZCnRg775Yoz3uQu80s8KG1wYR4
+VITE_AUTHDOMAIN=bigtreeland-c92f7.firebaseapp.com
+VITE_PROJECTID=bigtreeland-c92f7
+VITE_STORAGEBUCKET=bigtreeland-c92f7.appspot.com
+VITE_MESSAGINGSENDERID=1009597570289
+VITE_APPID=1:1009597570289:web:ec2393c24bd7c448665d50
+VITE_MEASUREMENTID=G-F0TPCRMDBX
