--- a/package.json
+++ b/package.json
@@ -33,13 +33,13 @@
     "socket.io-client": "^4.3.2",
     "styled-components": "^5.3.3",
     "typescript": "^4.1.2",
+    "vite-tsconfig-paths": "^3.3.17",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "vite",
+    "build": "tsc && vite build",
+    "serve": "vite preview"
   },
   "eslintConfig": {
     "extends": [
@@ -66,8 +66,12 @@
     "@types/styled-components": "^5.1.15",
     "@typescript-eslint/eslint-plugin": "^5.1.0",
     "@typescript-eslint/parser": "^5.1.0",
+    "@vitejs/plugin-react": "^1.1.4",
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "prettier": "^2.4.1"
+    "less": "^4.1.2",
+    "less-loader": "^10.2.0",
+    "prettier": "^2.4.1",
+    "vite": "^2.7.13"
   }
 }
