--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "dependencies": {
     "@ant-design/charts": "^1.3.3",
+    "@ckeditor/ckeditor5-build-classic": "^32.0.0",
+    "@ckeditor/ckeditor5-react": "^4.0.0",
+    "@monaco-editor/react": "^4.3.1",
     "@reduxjs/toolkit": "^1.6.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -15,7 +18,8 @@
     "@types/react-dom": "^17.0.0",
     "antd": "^4.16.13",
     "axios": "^0.23.0",
-    "firebase": "^9.3.0",
+    "draft-js": "^0.11.7",
+    "firebase": "^9.6.6",
     "i18next": "^21.6.5",
     "js-cookie": "^3.0.1",
     "laravel-echo": "^1.11.3",
@@ -24,10 +28,11 @@
     "numeral": "^2.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-draft-wysiwyg": "^1.14.7",
     "react-i18next": "^11.15.3",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.0",
     "redux": "^4.1.1",
     "redux-persist": "^6.0.0",
     "socket.io-client": "^4.3.2",
