--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "moment": "^2.29.1",
     "numeral": "^2.0.6",
     "react": "^17.0.2",
+    "react-csv": "^2.2.2",
     "react-dom": "^17.0.2",
     "react-draft-wysiwyg": "^1.14.7",
     "react-i18next": "^11.15.3",
