--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
+    "noImplicitAny":false,
     "jsx": "react-jsx",
     "downlevelIteration": true,
     "baseUrl": "./src",
