--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "antd": "^4.16.13",
+    "antv": "^0.2.2",
     "axios": "^0.23.0",
     "draft-js": "^0.11.7",
     "firebase": "^9.6.6",
@@ -73,12 +74,13 @@
     "@types/styled-components": "^5.1.15",
     "@typescript-eslint/eslint-plugin": "^5.1.0",
     "@typescript-eslint/parser": "^5.1.0",
-    "@vitejs/plugin-react": "^1.1.4",
+    "@vitejs/plugin-react": "1.0.5",
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
     "prettier": "^2.4.1",
-    "vite": "^2.7.13"
+    "vite": "^2.7.13",
+    "vite-plugin-imp": "^2.1.6"
   }
 }
