--- a/package.json
+++ b/package.json
@@ -1,86 +1,82 @@
 {
-  "name": "bigtreeland-client",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@ant-design/charts": "^1.3.3",
-    "@ckeditor/ckeditor5-build-classic": "^32.0.0",
-    "@ckeditor/ckeditor5-react": "^4.0.0",
-    "@monaco-editor/react": "^4.3.1",
-    "@reduxjs/toolkit": "^1.6.2",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@tinymce/tinymce-react": "^3.13.0",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^12.0.0",
-    "@types/numeral": "^2.0.2",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "antd": "^4.16.13",
-    "antv": "^0.2.2",
-    "axios": "^0.23.0",
-    "draft-js": "^0.11.7",
-    "firebase": "^9.6.6",
-    "i18next": "^21.6.5",
-    "js-cookie": "^3.0.1",
-    "laravel-echo": "^1.11.3",
-    "lodash": "^4.17.21",
-    "moment": "^2.29.1",
-    "numeral": "^2.0.6",
-    "react": "^17.0.2",
-    "react-csv": "^2.2.2",
-    "react-dom": "^17.0.2",
-    "react-draft-wysiwyg": "^1.14.7",
-    "react-i18next": "^11.15.3",
-    "react-player": "^2.9.0",
-    "react-redux": "^7.2.5",
-    "react-router-dom": "^5.3.0",
-    "react-scripts": "^5.0.0",
-    "redux": "^4.1.1",
-    "redux-persist": "^6.0.0",
-    "socket.io-client": "^4.3.2",
-    "styled-components": "^5.3.3",
-    "typescript": "^4.1.2",
-    "vite-tsconfig-paths": "^3.3.17",
-    "web-vitals": "^1.0.1"
-  },
-  "scripts": {
-    "start": "vite",
-    "build": "tsc && vite build",
-    "serve": "vite preview"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "@types/js-cookie": "^3.0.0",
-    "@types/lodash": "^4.14.176",
-    "@types/react-router-dom": "^5.3.1",
-    "@types/styled-components": "^5.1.15",
-    "@typescript-eslint/eslint-plugin": "^5.1.0",
-    "@typescript-eslint/parser": "^5.1.0",
-    "@vitejs/plugin-react": "1.0.5",
-    "eslint-plugin-react": "^7.26.1",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "less": "^4.1.2",
-    "less-loader": "^10.2.0",
-    "prettier": "^2.4.1",
-    "vite": "^2.7.13"
-  }
+	"name": "bigtreeland-client",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"@ant-design/charts": "^1.3.3",
+		"@ckeditor/ckeditor5-build-classic": "^32.0.0",
+		"@ckeditor/ckeditor5-react": "^4.0.0",
+		"@monaco-editor/react": "^4.3.1",
+		"@reduxjs/toolkit": "^1.6.2",
+		"@testing-library/jest-dom": "^5.11.4",
+		"@testing-library/react": "^11.1.0",
+		"@testing-library/user-event": "^12.1.10",
+		"@tinymce/tinymce-react": "^3.13.0",
+		"@types/jest": "^26.0.15",
+		"@types/node": "^12.0.0",
+		"@types/numeral": "^2.0.2",
+		"@types/react": "^17.0.0",
+		"@types/react-dom": "^17.0.0",
+		"antd": "^4.16.13",
+		"antv": "^0.2.2",
+		"axios": "^0.23.0",
+		"draft-js": "^0.11.7",
+		"firebase": "^9.6.6",
+		"i18next": "^21.6.5",
+		"js-cookie": "^3.0.1",
+		"laravel-echo": "^1.11.3",
+		"lodash": "^4.17.21",
+		"moment": "^2.29.1",
+		"numeral": "^2.0.6",
+		"react": "^17.0.2",
+		"react-csv": "^2.2.2",
+		"react-dom": "^17.0.2",
+		"react-draft-wysiwyg": "^1.14.7",
+		"react-i18next": "^11.15.3",
+		"react-player": "^2.9.0",
+		"react-redux": "^7.2.5",
+		"react-router-dom": "^5.3.0",
+		"react-scripts": "^5.0.0",
+		"redux": "^4.1.1",
+		"redux-persist": "^6.0.0",
+		"socket.io-client": "^4.3.2",
+		"styled-components": "^5.3.3",
+		"typescript": "^4.1.2",
+		"web-vitals": "^1.0.1"
+	},
+	"scripts": {
+		"start": "react-scripts start",
+		"build": "react-scripts build"
+	},
+	"eslintConfig": {
+		"extends": [
+			"react-app",
+			"react-app/jest"
+		]
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	},
+	"devDependencies": {
+		"@types/js-cookie": "^3.0.0",
+		"@types/lodash": "^4.14.176",
+		"@types/react-router-dom": "^5.3.1",
+		"@types/styled-components": "^5.1.15",
+		"@typescript-eslint/eslint-plugin": "^5.1.0",
+		"@typescript-eslint/parser": "^5.1.0",
+		"eslint-plugin-react": "^7.26.1",
+		"eslint-plugin-react-hooks": "^4.2.0",
+		"less": "^4.1.2",
+		"less-loader": "^10.2.0",
+		"prettier": "^2.4.1"
+	}
 }
