disable source map

--- a/.env
+++ b/.env
@@ -7,3 +7,4 @@ REACT_APP_MESSAGINGSENDERID=113408851209
 REACT_APP_APPID=1:113408851209:web:666940246bc162986f27d8
 REACT_APP_MEASUREMENTID=G-KG1VB3CFSS
 REACT_APP_ENVIROMENT=development
+GENERATE_SOURCEMAP=false
