--- a/.env.production
+++ b/.env.production
@@ -7,3 +7,4 @@ REACT_APP_MESSAGINGSENDERID=1009597570289
 REACT_APP_APPID=1:1009597570289:web:ec2393c24bd7c448665d50
 REACT_APP_MEASUREMENTID=G-F0TPCRMDBX
 REACT_APP_ENVIROMENT=production
+GENERATE_SOURCEMAP=false
