--- a/package.json
+++ b/package.json
@@ -46,8 +46,7 @@
 	},
 	"scripts": {
 		"start": "react-scripts start",
-		"build": "react-scripts build",
-		"prepare": "husky install"
+		"build": "react-scripts build"
 	},
 	"eslintConfig": {
 		"extends": [
@@ -76,20 +75,18 @@
 		"@typescript-eslint/parser": "^5.1.0",
 		"eslint-plugin-react": "^7.26.1",
 		"eslint-plugin-react-hooks": "^4.2.0",
-		"husky": "^7.0.4",
 		"less": "^4.1.2",
 		"less-loader": "^10.2.0",
-		"lint-staged": "^12.4.1",
 		"prettier": "^2.4.1"
 	},
 	"husky": {
 		"hooks": {
-			"pre-commit": "lint-staged"
+		  "pre-commit": "lint-staged"
 		}
-	},
-	"lint-staged": {
-		"*.{js,jsx,ts,tsx,css,scss,json}": [
-			"prettier --write"
+	  },
+	  "lint-staged": {
+		"*.{js,jsx,ts,tsx,css,scss}": [
+		  "prettier --write"
 		]
-	}
+	  }
 }
